# cub3D

./: CMakeLists.txt  Makefile  README.md  a.out  cub3D  lodev.cpp  parser.c  render.c  sample  sample.cub  sample_2.cub  sprites.c  vector_vision.c  window.c
Parser/: parser.c
Sprites/: sprites.c
Trigonometry/: vector_vision.c
include/: lists.h  parser.h  render.h  struct.h
init_struct/: init_struct.c
libs/libft/: Makefile  ft_split.c  ft_substr.c  libft.h
maps/: 1.cub  2.cub  3.cub  smth_specila.cub
pics/: greenlight.xpm  mlx.xpm  pillar.xpm
pics/smth_special/: 1.xpm  2.xpm  3.xpm  4.xpm  S.xpm
srcs/Move_and_pos/: move_rotate.c  pers_sprites_pos.c  spawn_add.c
srcs/Parser/: check_type_first_arg.c  color_check_f_c.c  create_rgb.c  cub3d.c  glob_error.c  init_pars_struct.c  map_proc.c  map_reproc.c  map_validation.c  proc_path_to_tex.c  proc_r_f_c.c
srcs/Render/: pix_color_txtrs.c  pixel_put.c  render.c  screenshoot.c  window.c
srcs/Sprites/: buble_sort_list.c  sprite_color.c  sprites_first.c  sprites_two.c
srcs/Trigonometry/: dist_between.c  distantion.c  null_x_y.c  vector_vision.c  what_a_wall.c
srcs/gnl/: get_next_line.c
srcs/include/: cub3d.h  render.h  struct.h
srcs/init_struct/: init_struct.c
